# openenv-business-sim

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  kaggle_build.ipynb  openenv.yaml  pyproject.toml  requirements.txt  test_grade.py  validate.py
src/: business_sim_env.py  models.py  server.py
src/environment/: adversarial.py  company_env.py  market_agent.py
src/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
