[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "business-sim-env"
version = "0.1.0"
description = "Business Simulation Environment OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.0",
    "openai==1.30.0",
    "httpx==0.27.0",
    "pyyaml==6.0.1"
]
